# Financial-Research-AI-Agent-Development

./: .gitignore  .replit  API.md  BUILD_SUMMARY.md  DEPLOY.md  Dockerfile  Layout.tsx  QUICKSTART.md  README.md  SETUP.md  WEEK1_SUMMARY.md  api.ts  api_client.py  chat.py  chat.tsx  ci-cd.yml  config.py  database.py  docker-compose.yml  globals.css  index.tsx  next.config.js  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start_production.sh  stock.py  stocks.py  stocks.tsx  tailwind.config.js  tsconfig.json  vercel.json
attached_assets/: project_1775933120759.txt
backend/: .env.example  Dockerfile  Procfile  finance.db  main.py  railway.json  requirements.txt
backend/app/core/: config.py
frontend/: index.html  next.config.js  next.config.ts  package-lock.json  package.json
frontend/assets/css/: styles.css
frontend/assets/js/: script.js
frontend/components/: sidebar.html  ticker.html  topbar.html
frontend/src/components/: AuthGate.tsx  Layout.tsx  TradingViewChart.tsx
frontend/src/pages/: _app.tsx  bonds.tsx  brokers.tsx  calculators.tsx  charts.tsx  chat.tsx  compare.tsx  economic-indicators.tsx  futures.tsx  index.tsx  options.tsx  portfolio.tsx  sectors.tsx  stocks.tsx  watchlist.tsx  wellness.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: api.ts
mnt/user-data/outputs/Financial-Research-AI-Agent-Development/backend/: Dockerfile
mnt/user-data/outputs/Financial-Research-AI-Agent-Development/backend/app/schemas/: __init__.py
