[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alpha-vantage==2.3.1",
    "anthropic==0.7.6",
    "fastapi>=0.125.0",
    "httpx==0.25.2",
    "nltk==3.8.1",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "pydantic==2.5.0",
    "pydantic-settings>=2.2.1",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "redis>=7.4.0",
    "requests==2.31.0",
    "sqlalchemy>=2.0.49",
    "textblob==0.17.1",
    "uvicorn==0.24.0",
    "yfinance==0.2.33",
]
